Fixes Layout Issues

--- a/home_philippe_css.css
+++ b/home_philippe_css.css
@@ -25,6 +25,7 @@
       transition: .5s ease;
       filter: grayscale(0);
       }
+
       .center-logo{
         position: absolute;
         width:400px;
@@ -58,6 +59,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        overflow: hidden;
       }
       .my-menu{
         background-color: black;
@@ -94,7 +96,7 @@
       .profile-card img{
         position: relative;
         max-height:100%;
-        max-width: 550px;
+        max-width: 100%;
         margin-top:auto;
         margin-bottom: auto;
         display:block;
@@ -139,27 +141,52 @@
         border-radius: 0%;
       }
 
-      .on-glass p,h2,h3{
+      .on-glass p,h1,h2{
         color:white;
-        background-color: rgba(0,0,0,0.4);
-        padding:5px;
+        background-color: rgba(0,0,0,0.7);
+        padding:10px;
       }
 
 
       .carousel-item {
         overflow:hidden;
-        height:80vh;
-        line-height: 30vh;
+        height:60vh;
+        
       }
 
       .carousel-item img{
         vertical-align: middle;
-        max-height: auto;
-        width:100vw;
         margin: 0;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        min-height: 60vh;
+      }
 
+
+      .skill-set {
+        min-height: 70vh;
+        background-color: black;
+        padding: 15px 10px;
+
+      }
+
+      .skill-set h1,h2,h3,p {
+        color:white;
+        background-color: black;
+      }
+
+      .progress {
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+
+      .progress-bar {
+        background-color: red;
+      }
+
+      .container-fluid {
+        padding-bottom:10px;
+        background-color: black;
       }
